--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -8,10 +11,10 @@
       <div class="navLeft">Logo</div>
       <div class="navRight">
         <ul>
-          <li><a id="home" href="#home"></a>Home</li>
-          <li><a id="duck" href="#duck"></a>Duck</li>
-          <li><a id="emergency" href="#emergency"></a>Emergency</li>
-          <li><a id="contact" href="#contact"></a>Contact</li>
+          <li><a id="homeLink" href="#home">Home</a></li>
+          <li><a id="duckLink" href="#duck">Duck</a></li>
+          <li><a id="emergencyLink" href="#emergency">Emergency</a></li>
+          <li><a id="contactLink" href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -43,7 +46,7 @@
       </section>
     </main>
     <footer id="contact">
-       <h2>Contact us</h2>
+       <h2>Contact us:</h2>
        <form action="">
         <input type="text" name="" id="">
         <textarea name="" id="" cols="30" rows="10"></textarea>
